2003-05-20  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* status.html: Remove.
	* index.html: Adjust accordingly.

2002-11-12  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* index.html: Remove navigation, which is now handled by the
	global style.
	* status.html: Ditto.
	
2002-11-11  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* thanks.html: Remove this files.
	* index.html: Remove link to thanks.html; add link to GCC main page.
	* status.html: Ditto.
	
2002-07-15  Phil Edwards  <pme@gcc.gnu.org>

	* index.html:  Add "#download" anchor.

2002-07-08  Phil Edwards  <pme@gcc.gnu.org>

	* download.html, footer.ihtml, header.ihtml:  Removed files.
	* index.html, status.html, thanks.html:  Update to match.

2002-05-01  Phil Edwards  <pme@gcc.gnu.org>

	* index.html:  Add comment for 3.1
	* thanks.html:  Tweaks to HTML, more people.

2002-04-19  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* status.html: Fix link to GCC 2.95.

2002-03-20  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* status.html: Update two links to GCC 2.95 releases and make some
	links relative.

2002-03-06  Phil Edwards  <pme@gcc.gnu.org>

	* index.html:  Mention new snapshot.

2002-02-18  Andrea Bocci <fwyzard@inwind.it>

	* download.html:  Full XHTML 1.0 compliance.
	* footer.ihtml:  Likewise.
	* header.ihtml:  Likewise.
	* index.html:  Likewise.
	* status.html:  Likewise.
	* thanks.html:  Likewise.

2002-02-01  Phil Edwards  <pme@gcc.gnu.org>

	* index.html:  Mention new snapshot and doxygen project.

2002-01-28  Phil Edwards  <pme@gcc.gnu.org>

	* status.html:  Update last-known-good GCC snapshot.

2001-12-27  Phil Edwards  <pme@gcc.gnu.org>

	* index.html:  Fix date.
	* status.html:  Update last-known-good GCC snapshot.

2001-12-19  Phil Edwards  <pme@gcc.gnu.org>

	* download.html:  Point to status page.
	* index.html:  Mention new snapshot.
	* status.html:  Update.
	* thanks.html:  Update.

2001-10-16  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* download.html: Update cvsweb URL.
