@@ -1,3 +1,7 @@
+2006-12-11  Ian Lance Taylor  <iant@google.com>
+
+	* index.html: Remove news entries.
+
 2003-05-20  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* status.html: Remove.
